# aum_oxide

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: LiveTrak L6.oxiindef  LiveTrak_L6max.oxiindef  king_of_bass.oxiindef  none.aum_midimap  some.aum_midimap  some.oxiindef
src/aum_oxide/: __init__.py  __main__.py  converter.py
tests/: test_converter.py
